Fix calendar z-index for popper

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 .calendar {
-  z-index: 2;
+  z-index: 5 !important;
 }
 
 .date-picker-wrapper {
